--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       content="Web site created using create-react-app"
     />
     <script src="https://www.youtube.com/iframe_api"></script>
-    <title>App</title>
+    <title>TubePlayer</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
